Avoid deprecated method call.